--- a/src/pages/home-page.css
+++ b/src/pages/home-page.css
@@ -84,6 +84,7 @@ header{
     border-radius: 20px;
     background: lightgray;
     position: relative;
+    overflow: hidden;
 }
 
 .about-picture > img {
@@ -92,6 +93,10 @@ header{
     width: 100%; 
     height: 100%; 
     border-radius: 20px;
+}
+
+.about-picture > img:hover{
+    scale: 1.1;
 }
 
 .float-panel{
